--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             </div>
             <div class="header__bottom">
               <nav class="nav-desktop">
+                <a href="#urban-lines" id="nav-urban-lines-desktop">
+                  <i class="fas fa-map"></i>
+                  Mapa gradskih linija
+                </a>
                 <a href="#lines" id="nav-lines-desktop">
                   <i class="fas fa-route"></i>
                   Linije
@@ -82,6 +86,10 @@
                   <button class="lang-btn active" data-lang="bhs">BHS</button>
                 </div>
               </div>
+              <a href="#urban-lines" id="nav-urban-lines">
+                <i class="fas fa-map"></i>
+                Mapa gradskih linija
+              </a>
               <a href="#lines" id="nav-lines">
                 <i class="fas fa-route"></i>
                 Linije
@@ -109,6 +117,24 @@
             </nav>
           </div>
         </header>
+
+        <section class="section section--wide" id="urban-lines">
+          <div class="container">
+            <h2 class="section__title" id="urban-lines-title">
+              Gradske Linije
+            </h2>
+            <div class="map-container urban-lines-map">
+              <div id="urban-lines-viewer"></div>
+            </div>
+            <div class="map-note">
+              <i class="map-note__icon fas fa-info-circle"></i>
+              <span
+                >Koristite točkić miša za zumiranje i prevlačite mišem za
+                kretanje po mapi.</span
+              >
+            </div>
+          </div>
+        </section>
 
         <section class="section section--wide" id="lines">
           <div class="container">
@@ -261,6 +287,7 @@
     <script src="data/bus_routes.js"></script>
     <script src="js/script.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/urban-lines-viewer.js"></script>
     <script>
       document.getElementById("current-year").textContent =
         new Date().getFullYear();
